# tcss343-programming-project

./: Cargo.toml  README.md  temp.txt
benches/: intermediate.rs  my_benchmark.rs
src/: bitboard.rs  legal_moves.rs  lib.rs  magic.rs  main.rs  square.rs  temp.txt
src/move_gen/: lookup.rs  mod.rs  pawn.rs  sliding.rs
