[package]
name = "move_gen_analysis"
version = "0.1.0"
edition = "2021"

[lib]
name = "move_gen_analysis"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "intermediate"
harness = false

[dependencies]
rand = "0.8.4"
